# MPZRPC

./: README.md  test.cpp
example/callee/: friendservice.cc  userservice.cc
example/caller/: calluserservice.cc
src/: CMakeLists.txt  mprpcchannel.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
